[package]
name = "json-collection"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive-getters = "^0.0.3"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "json_collection"
path = "src/lib.rs"
